<resources>
    <string name="app_name">Bdk Mosa3de? </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email_edit_text_text">Email</string>
    <string name="password_edit_text_text">Password</string>
    <string name="sign_in_btn_text">Log In</string>
    <string name="sign_up_text">Do not have an account, </string>
    <string name="sign_up_link"><u>Sign up</u></string>

    <string name="login_text">Login...</string>
    <string name="has_an_account_text">I already have an Account</string>
    <string name="use_social_text">Log in by...</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bdk_mosa3de">Bdk mosa3de?</string>
    <string name="need_help">بدك مساعدة؟</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">Username</string>
    <string name="birthdate">Birthdate</string>


    <string name="chef">Chef (orders)</string>
    <string name="cosmetic">Makeup artist</string>
    <string name="sink">‏Plumbing</string>
    <string name="saw">‏Carpentry</string>
    <string name="socket">‏Electricity</string>
    <string name="clean">House cleaning</string>
    <string name="deed">‏Blacksmith</string>
    <string name="build">Tashteeb</string>
    <string name="delivery">Load and unload</string>
    <string name="design">Designer</string>
    <string name="farming">‏Farmer</string>
    <string name="mokayf">‏Conditioning</string>
    <string name="satalite">Satellite</string>
    <string name="video">Montage</string>
    <string name="events">‏Event Organizer</string>

    <string name="choose_time">* Choose Time</string>
    <string name="chose_date">* Choose Date</string>
    <string name="choose_location">Choose Location</string>
    <string name="details">Details</string>
    <string name="write_details_here">Write Details here</string>
    <string name="order_now">Order Now</string>
    <string name="order_done">Your Order Was Submitted Successfully, \nWill Contact With You Soon</string>
    <string name="please_complete">Please complete the required fields</string>
    <string name="unmatched_password">Password doesn\'t match</string>
    <string name="invalid_phone">Phone must be 10 digits</string>
    <string name="invalid_email">Invalid email</string>
    <string name="from_time_txt">From</string>
    <string name="to_time_txt">To</string>
    <string name="choose_location_map">Choose Location On Map</string>


    <array name="areas">
        <item>AlGardns</item>
        <item>AlManarah</item>
        <item>AlYadodah</item>
        <item>Dahyat Al Ameer Rashid</item>
        <item>AlJbeeha</item>
        <item>Swileh</item>
        <item>Dabouq</item>
        <item>Khalda</item>
        <item>Jabal AlHusain</item>
        <item>1st Circle</item>
        <item>2nd Circle</item>
        <item>3ed Circle</item>
        <item>4th Circle</item>
        <item>5th Circle</item>
        <item>6th Circle</item>
        <item>7th Circle</item>
        <item>8th Circle</item>
        <item>Um Uthineh</item>
        <item>Abdoun</item>
        <item>Swifieh</item>
        <item>Kilo Circle</item>
        <item>Maca Street</item>
        <item>Dahyat Al Ameer Hasan</item>
        <item>Shmisani</item>
        <item>Arjan</item>
        <item>Shafa Badran</item>
        <item>AlQuaismeh</item>
        <item>AlAshrafiah</item>
        <item>AlJofeh</item>
        <item>AlTaj</item>
        <item>AlNaser</item>
        <item>Um Nowarah</item>
        <item>AlJandaweel</item>
        <item>Marj AlHamam</item>
        <item>Airport way</item>
        <item>AlBayader</item>
        <item>AlJama\'a Street</item>
        <item>Telae AlAli</item>
        <item>AlYasmin</item>
        <item>AlNozha</item>
        <item>Dahyat AlRasheed</item>
        <item>AlRawnaq</item>
        <item>AlNadeef</item>
        <item>Nazal</item>
        <item>AlZhor</item>
        <item>Alhashmi alshamali</item>
        <item>Alhashmi aljanoubi</item>
        <item>Naour</item>
        <item>Marka alshamalia</item>
        <item>marka aljnobya</item>

    </array>
    <string name="title_activity_maps">Map</string>
    <string name="about">تطبيق "بدك مساعدة؟" \nهو رسالة الشباب الى هذا المجتمع العظيم ، نسعى الى بناء جيل يعي ما يجب ان يكون ،
و نعالج المشاكل و التحديات التي تواجهنا في هذا المجتمع ،\n نوفر لكم ١٥ خدمة يقدمها طلاب الجامعات
\nحتى تبني لهم خبرةً عملية و تساعدهم في الحصول على عمل ، \nنحن الشباب نحن البناة.</string>
    <string name="from_areas">From Areas</string>
    <string name="on_map">On Map</string>
    <string name="female" />
    <string name="male">male</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
