<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">


    <TextView

        android:id="@+id/service_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gochi_hand"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="50dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textlogo">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gochi_hand"
                    android:gravity="center"
                    android:text="@string/chose_date"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:orientation="horizontal">



                    <TextView
                        android:id="@+id/in_date"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/rounded_white"
                        android:gravity="center"
                        android:text="00-00-00" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gochi_hand"
                    android:gravity="center"
                    android:text="@string/choose_time"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:orientation="horizontal">


                    <TextView
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/from_time_txt" />

                    <TextView
                        android:id="@+id/from_time"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/rounded_white"
                        android:gravity="center"
                        android:text="00:00" />

                    <TextView
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/to_time_txt" />


                    <TextView
                        android:id="@+id/to_time"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight=".5"
                        android:background="@drawable/rounded_white"
                        android:gravity="center"
                        android:text="00:00" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gochi_hand"
                    android:gravity="center"
                    android:text="@string/choose_location"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/rounded_white"
                    android:spinnerMode="dialog"
                    android:id="@+id/areas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:entries="@array/areas" />


                <TextView
                    android:id="@+id/locMap"
                    android:text="@string/choose_location_map"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight=".5"
                    android:background="@drawable/rounded_white"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gochi_hand"
                    android:gravity="center"
                    android:text="@string/details"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/in_det"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_white"
                    android:gravity="top|left"
                    android:hint="@string/write_details_here"
                    android:lines="4"
                    android:maxLines="10"
                    android:minLines="1"
                    android:paddingBottom="20dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:scrollbarAlwaysDrawVerticalTrack="true" />

            </LinearLayout>

            <Button
                android:id="@+id/orderNow"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_now"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>